<ru.coolsoft.alphatrainer.ui.layouts.RelativeLayoutEx xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridActivity$PlaceholderFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/text1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grid"
        android:choiceMode="multipleChoice"
        android:layout_below="@android:id/text1"
        android:layout_above="@android:id/text2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clipToPadding="false"/>
	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-7672444295949563/9682818537"
        ads:adSize="SMART_BANNER"
        android:layout_alignParentBottom="true"
	/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/text2"
        android:layout_above="@id/adView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="textStart"
        android:gravity="start"

        android:hint="@string/contentDescription_guess"
        android:ellipsize="start"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <!--android:editable="false"-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/correct"
        android:background="#8000FF00"
        android:layout_alignTop="@android:id/text2"
        android:layout_alignBottom="@android:id/text2"
        android:layout_alignStart="@android:id/text2"
        android:layout_alignEnd="@android:id/text2"
        android:visibility="gone"
        android:contentDescription="@string/contentDescription_correct"
        android:layout_alignLeft="@android:id/text2"
        android:layout_alignRight="@android:id/text2" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highlight"
        android:background="#FF9000"
        android:layout_alignTop="@android:id/text2"
        android:layout_alignBottom="@android:id/text2"
        android:layout_alignStart="@android:id/text2"
        android:contentDescription="@string/contentDescription_hint"
        android:visibility="gone"
        android:layout_alignLeft="@android:id/text2" />
    <ImageButton
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:background="@android:drawable/ic_menu_help"
        android:layout_alignTop="@android:id/text2"
        android:layout_alignEnd="@android:id/text2"
        android:contentDescription="@string/contentDescription_help"
        android:layout_alignRight="@android:id/text2" />
    <ImageButton
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_alignTop="@android:id/text2"
        android:layout_toStartOf="@id/help"
        android:contentDescription="@string/contentDescription_x"
        android:layout_toLeftOf="@id/help" />
    <ImageButton
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:background="@android:drawable/ic_menu_revert"
        android:layout_alignTop="@android:id/text2"
        android:layout_toStartOf="@id/x"
        android:contentDescription="@string/contentDescription_c"
        android:layout_toLeftOf="@id/x" />
    
</ru.coolsoft.alphatrainer.ui.layouts.RelativeLayoutEx>
